JCR Environment - adding JCR vagrant machines - correction of small glitches on MongoDB vagrant scripts - Adding missing ops to `README.md`